@@ -9,7 +9,7 @@
  * @subpackage  Gutenberg CSS Frontend
  * @copyright   Copyright (c) 2022, WeCodeArt Framework
  * @since		5.0.0
- * @version		5.5.1
+ * @version		5.5.5
  */
 
 namespace WeCodeArt\Gutenberg\Modules\Styles\Blocks;
@@ -39,7 +39,6 @@ class Spacer extends Base {
 			$this->output[] = wp_parse_args( [
 				'property' 	=> '--wp--spacer-height',
 				'value'	  	=> $value,
-				'units'		=> 'px'
 			], $output );
 		}
 		
@@ -47,8 +46,7 @@ class Spacer extends Base {
 			// Mobile Spacer can be reduced using custom CSS variable
 			$this->output[] = wp_parse_args( [
 				'property' 	=> '--wp--spacer-width',
-				'value'	  	=> $value . 'px',
-				'units'		=> 'px'
+				'value'	  	=> $value,
 			], $output );
 		}
 	}
