@@ -7,7 +7,20 @@
     <!-- /wp:column -->
     <!-- wp:column {"verticalAlignment":"center"} -->
     <div class="wp-block-column is-vertically-aligned-center">
-        <!-- wp:navigation {"textColor":"primary","overlayMenu":"mobile","__unstableLocation":"primary","overlayBackgroundColor":"primary","overlayTextColor":"white","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}}} /-->
+        <!-- wp:navigation {"textColor":"primary","overlayBackgroundColor":"primary","overlayTextColor":"white","className":"","layout":{"type":"flex","justifyContent":"right","orientation":"horizontal"},"style":{"typography":{"textTransform":"uppercase","fontStyle":"normal","fontWeight":"600"}},"customCSS":"selector .nav-item\u002d\u002dcore-social-links {\n  align-self: center;\n}\n"} -->
+        <!-- wp:social-links {"iconColor":"primary","iconColorValue":"#2388ed","className":"is-style-logos-only","layout":{"type":"flex","justifyContent":"left"},"style":{"spacing":{"blockGap":{"top":"8px","left":"8px"}}},"customCSS":""} -->
+        <ul class="wp-block-social-links has-icon-color is-style-logos-only">
+            <!-- wp:social-link {"url":"https://wordpress.org/themes/wecodeart/","service":"wordpress"} /-->
+            <!-- wp:social-link {"url":"https://www.facebook.com/mvbican","service":"facebook","className":"me-1"} /-->
+        </ul>
+        <!-- /wp:social-links -->
+        <!-- wp:spacer {"height":"0px","width":"1px","className":"vr"} -->
+        <div style="height:0px;width:1px" aria-hidden="true" class="wp-block-spacer vr"></div>
+        <!-- /wp:spacer -->
+        <!-- wp:navigation-link {"label":"Home","type":"custom","url":"/","isTopLevelLink":true} /-->
+        <!-- wp:navigation-link {"label":"Blog","type":"custom","url":"/blog/","isTopLevelLink":true} /-->
+        <!-- wp:search {"showLabel":false,"placeholder":"Looking for...?","buttonPosition":"button-inside","buttonUseIcon":true,"backgroundColor":"primary","textColor":"white"} /-->
+        <!-- /wp:navigation -->
     </div>
     <!-- /wp:column -->
 </div>
