@@ -31,6 +31,11 @@
 			"area": "header"
 		},
 		{
+			"title": "Header (with Search)",
+			"name": "header-search",
+			"area": "header"
+		},
+		{
 			"title": "Header (Dark)",
 			"name": "header-dark",
 			"area": "header"
